// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test Collect Elements Components test CardHolderNameElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    CardHolderName
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <TextInput
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="CardHolder Name"
    style={{}}
    value=""
  />
  <Text
    style={{}}
    testID="name-error"
  />
</View>
`;

exports[`test Collect Elements Components test CardNumberElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    CardNumber
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <View
    style={
      {
        "borderColor": "#eae8ee",
        "borderRadius": 4,
        "borderWidth": 2,
        "flexDirection": "row",
        "gap": 4,
        "paddingHorizontal": 6,
      }
    }
  >
    <Image
      resizeMode="contain"
      source={
        {
          "testUri": "../../../assets/visa.png",
        }
      }
      style={
        {
          "height": 50,
          "width": 50,
        }
      }
    />
    <TextInput
      keyboardType="numeric"
      maxLength={23}
      onBlur={[Function]}
      onChangeText={[Function]}
      onFocus={[Function]}
      placeholder="card number"
      style={
        {
          "flex": 1,
        }
      }
      value=""
    />
  </View>
  <Text
    style={{}}
    testID="cardnumber-error"
  />
</View>
`;

exports[`test Collect Elements Components test CvvElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    Cvv
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <TextInput
    keyboardType="numeric"
    maxLength={4}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="cvv"
    style={{}}
    value=""
  />
  <Text
    style={{}}
    testID="cvv-error"
  />
</View>
`;

exports[`test Collect Elements Components test ExpirationDateElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    Expiration Date
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <TextInput
    keyboardType="numeric"
    maxLength={5}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="expiration date"
    style={{}}
    value=""
  />
  <Text
    style={{}}
    testID="date-error"
  />
</View>
`;

exports[`test Collect Elements Components test ExpirationMonthElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    Expiration Month
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <TextInput
    keyboardType="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="expiration month"
    style={{}}
    value=""
  />
  <Text
    style={{}}
    testID="month-error"
  />
</View>
`;

exports[`test Collect Elements Components test ExpirationYearElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    Expiration Year
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <TextInput
    keyboardType="numeric"
    maxLength={2}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="expiration year"
    style={{}}
    value=""
  />
  <Text
    style={{}}
    testID="year-error"
  />
</View>
`;

exports[`test Collect Elements Components test InputFieldElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    First Name
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <TextInput
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="first name"
    style={{}}
    value=""
  />
  <Text
    style={{}}
    testID="inputfield-error"
  />
</View>
`;

exports[`test Collect Elements Components test PinElement component 1`] = `
<View>
  <Text
    style={{}}
  >
    Pin
    <Text
      style={
        {
          "color": "red",
        }
      }
    >
       *
    </Text>
  </Text>
  <TextInput
    keyboardType="numeric"
    maxLength={12}
    onBlur={[Function]}
    onChangeText={[Function]}
    onFocus={[Function]}
    placeholder="pin"
    style={{}}
    value=""
  />
  <Text
    style={{}}
    testID="pin-error"
  />
</View>
`;

exports[`test Collect Elements Components test Reveal Elements Components renders correctly with the handler & snapshot 1`] = `
[
  <Text
    style={{}}
  >
    Card Number
  </Text>,
  <Text
    selectable={true}
    style={{}}
  >
    XXXX XXXX XXXX XXXX
  </Text>,
  <Text
    style={{}}
    testID="Card Number-error"
  />,
]
`;

exports[`test Collect Elements Components test RevealElement component rendering 1`] = `
[
  <Text
    style={{}}
  >
    Card Number
  </Text>,
  <Text
    selectable={true}
    style={{}}
  >
    XXXX XXXX XXXX XXXX
  </Text>,
  <Text
    style={{}}
    testID="Card Number-error"
  />,
]
`;

exports[`test Collect Elements Components test skyflow provider 1`] = `
<Text>
  Provider Children
</Text>
`;
